# ICPC-Assiut-New-Commers-Sheet

./: CMakeLists.txt  Sheet-01-(DataTypes-Conditions).cpp  Sheet-02-(Loops).cpp  Sheet-03-(Arrays).cpp  Sheet-04-(Strings).cpp  Sheet-05-(Functions).cpp  Sheet-06-(Math-Geometry).cpp  Sheet-07-(Recursion).cpp  Sheet-08-(General-Easy).cpp  Sheet-09-(General-Medium).cpp  Sheet-10-(General-Hard).cpp  Sheet-9-(General-Medium).cpp
