cmake_minimum_required(VERSION 4.0)
project(NewcomersSheet)

set(CMAKE_CXX_STANDARD 20)

add_executable(NewcomersSheet "Sheet-01-(DataTypes-Conditions).cpp"
        "Sheet-02-(Loops).cpp"
        "Sheet-03-(Arrays).cpp"
        "Sheet-04-(Strings).cpp"
        "Sheet-05-(Functions).cpp"
        "Sheet-06-(Math-Geometry).cpp"
        Contest-1.cpp
    Contest-2.cpp
    Contest-3.cpp
        "Sheet-07-(Recursion).cpp"
        "Sheet-08-(General-Easy).cpp"
        "Sheet-09-(General-Medium).cpp"
        "Sheet-10-(General-Hard).cpp"
)
